tdf#146248 sw: fix crash at Undo of hiding page header/footer

When Same content on first page is enabled, Undo could result
crashing after hiding header/footer with its local menu.

Note: the problem could occur in DOCX more frequently,
because of special handling of its header/footer,
see commit f5dc6b11d2218d94c9effe7a1ab418d0133da5e3
"tdf#140117 sw UI: keep headers/footers when inactive".

Manual test: load the unit test document, delete
the header with its blue local menu (not with the Page
Style dialog window!), and press Undo. (The Python
UITest does the same, but with dispatcher calls).

Regression from commit 65e52cb61d74b0c71b45b63b2da131bc6b621104
"tdf#141613 sw: fix crash at header/footer undo".

Change-Id: If89d5af2e0d123d6913dfc6a4bea1ddbaf3bd80b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145244
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit cec3c719303decd3b811a328fabd71d8c4e5ba3b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145300
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>