sw/qa/uitest/writer_tests4/insertPageHeader.py
@@ -8,6 +8,7 @@
 #
 
 from uitest.framework import UITestCase
+from uitest.uihelper.common import get_url_for_data_file
 
 class WriterInsertPageHeader(UITestCase):
 
@@ -60,5 +61,18 @@ class WriterInsertPageHeader(UITestCase):
             self.xUITest.executeCommand(".uno:SelectAll")
 
             self.delete_header()
+
+    def test_tdf146248(self):
+        with self.ui_test.load_file(get_url_for_data_file("tdf146248.docx")):
+
+            self.delete_header()
+
+            # crashed before
+            self.xUITest.executeCommand(".uno:Undo")
+
+            document = self.ui_test.get_component()
+            self.assertEqual(
+                document.StyleFamilies.PageStyles.Standard.HeaderIsOn, True)
+
 
 # vim: set shiftwidth=4 softtabstop=4 expandtab:
